Fix: wrapping not working

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -65,7 +65,3 @@
   width: 100%;
   height: 100%;
 }
-
-.buttons_src-pages-{
-  flex-wrap: wrap-reverse;
-}
