--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -19,7 +19,6 @@
 }
 
 .buttons {
-  display: flex;
   align-items: center;
   justify-content: center;
 }
